# Face-Recognition-on-Android

./: LICENSE  README.md  build.gradle  import-summary.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/conex/facerecognition/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FaceRecognizer_jni.cpp  FaceRecognizer_jni.h  FaceTracker_jni.cpp  FaceTracker_jni.h  native-lib.cpp
app/src/main/java/conex/facerecognition/: CVFaceRecognizer.java  EnrollActivity.java  FaceRecognizer.java  FaceTracker.java  Facenet.java  GlobalClass.java  RecognitionActivity.java  SettingsActivity.java
app/src/main/java/conex/facerecognition/util/: ImageUtil.java
app/src/main/res/drawable/: circle.xml
app/src/main/res/layout/: activity_enroll.xml  activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/conex/facerecognition/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
